@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- *  RCS: @(#) $Id: tkBind.c,v 1.45.2.3 2010/01/29 12:41:11 nijtmans Exp $
+ *  RCS: @(#) $Id: tkBind.c,v 1.45.2.4 2010/05/31 17:22:48 jenglish Exp $
  */
 
 #include "tkInt.h"
@@ -962,6 +962,10 @@ Tk_CreateBinding(
     unsigned long eventMask;
     char *newStr, *oldStr;
 
+    if (!*command) {
+	/* Silently ignore empty scripts -- see SF#3006842 */
+	return 1;
+    }
     psPtr = FindSequence(interp, &bindPtr->patternTable, object, eventString,
 	    1, 1, &eventMask);
     if (psPtr == NULL) {
@@ -1020,7 +1024,7 @@ Tk_CreateBinding(
 /*
  *---------------------------------------------------------------------------
  *
- * TkCreateBindingFunction --
+ * TkCreateBindingProcedure --
  *
  *	Add a C binding to a binding table, so that future calls to
  *	Tk_BindEvent may callback the function in the binding.
